--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "Team09",
-  "version": "0.0.0",
+  "name": "CornPub",
+  "version": "0.0.1",
   "ignore": [
     "**/.*",
     "bower_components",
@@ -8,7 +8,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.3.5"
   }
 
 }
