--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,8 @@
   ],
   "dependencies": {
     "angular": ">=1.4.*",
+    "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.3.5",
-    "angular-ui-router": "~0.2.15"
+    "jquery": "~2.1.4"
   }
-
 }
