--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular": ">=1.4.*",
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.3.5",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "angular-bootstrap": "~0.13.4"
   }
 }
