--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "prestart": "npm install && bower install",
-    "start": "gulp && gulp jshint"
+    "start": "gulp && gulp jshint && node server.js"
   },
   "dependencies": {},
   "devDependencies": {
