--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.3.5",
     "jquery": "~2.1.4",
-    "angular-bootstrap": "~0.13.4"
+    "angular-bootstrap": "~0.13.4",
+    "angular-resource": "~1.4.7"
   }
 }
