--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "jquery": "~2.1.4",
     "angular-bootstrap": "~0.13.4",
     "angular-resource": "~1.4.7",
-    "angular-animate": "~1.4.7"
+    "angular-animate": "~1.4.7",
+    "angular-utils-pagination": "latest"
   }
 }
