--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "angular-bootstrap": "~0.14.3",
     "angular-resource": "~1.4.7",
     "angular-animate": "~1.4.7",
-    "angular-utils-pagination": "latest"
+    "angular-utils-pagination": "latest",
+    "satellizer": "~0.13.0",
+    "angular-messages": "~1.4.7"
   }
 }
