--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular-animate": "~1.4.7",
     "angular-utils-pagination": "latest",
     "satellizer": "~0.13.0",
-    "angular-messages": "~1.4.7"
+    "angular-messages": "~1.4.7",
+    "angular-md5": "~0.1.10"
   }
 }
